--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="text-center">
+      <img src="assets/img/spinner.svg" />
+    </div>
+  </app-root>
 </body>
 </html>
